Fixing address truncation papercuts (#12330)
* fixing address truncation papercuts

--- a/ui/components/ui/sender-to-recipient/index.scss
+++ b/ui/components/ui/sender-to-recipient/index.scss
@@ -178,6 +178,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+        margin-inline-start: 8px;
 
         [dir='rtl'] & {
           /*rtl:ignore*/
